--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Blink App</title>
     <!-- CRITICAL: DO NOT REMOVE/MODIFY THIS COMMENT OR THE SCRIPT BELOW -->
     <script src="https://blink.new/auto-engineer.js?projectId=edufleet-school-vehicle-marketplace-27qkw3wc" type="module"></script>
+    <!-- Razorpay payment gateway -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="root"></div>
